--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Appointment/ViewVehicle.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Appointment/ViewVehicle.cshtml
@@ -4,7 +4,7 @@
 <div class="container mt-5">
     <div class="row align-items-center mb-4" style="margin-top: 96px;">
         <div class="col d-flex align-items-center">
-            <h2 class="mb-0">Vehicles</h2>
+            <h2 class="mb-0">Vehicles For Test Drive</h2>
         </div>
     </div>
 
