--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Home/Index.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Home/Index.cshtml
@@ -67,6 +67,7 @@
         </div>
 
     </section><!-- /Hero Section -->
+
     <!-- About Section -->
     <section id="about" class="about section">
 
@@ -105,7 +106,7 @@
                         </div>
 
                         <div class="cta-section">
-                            <a href="#" team="" class="btn-outline">Meet Our Team</a>
+                            <a href="#team" class="btn-outline">Meet Our Team</a>
                         </div>
                     </div>
                 </div>
@@ -131,6 +132,7 @@
         </div>
 
     </section><!-- /About Section -->
+
     <!-- Services Section -->
     <section id="services" class="services section">
 
@@ -228,6 +230,7 @@
         </div>
 
     </section><!-- /Services Section -->
+
     <!-- Why Us Section -->
     <section id="why-us" class="why-us section">
 
@@ -311,6 +314,7 @@
         </div>
 
     </section><!-- /Why Us Section -->
+
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section">
 
@@ -488,6 +492,7 @@
         </div>
 
     </section><!-- /Testimonials Section -->
+
     <!-- Contact Section -->
     <section id="contact" class="contact section light-background">
         <!-- Section Title -->
