add staff and manager home page; update category, vehicle, appointment ui

--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Appointment/ViewVehicle.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Appointment/ViewVehicle.cshtml
@@ -1,8 +1,12 @@
 ﻿@using BusinessObject.BusinessObject.VehicleModels.Respond
 @model List<GetVehicleRespond>
 
+@{
+    Layout = "~/Views/Shared/Dealer_Layout.cshtml";
+}
+
 <div class="container mt-5">
-    <div class="row align-items-center mb-4" style="margin-top: 96px;">
+    <div class="row align-items-center mb-4">
         <div class="col d-flex align-items-center">
             <h2 class="mb-0">Vehicles For Test Drive</h2>
         </div>
