--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Category/IndexCategory.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Category/IndexCategory.cshtml
@@ -3,11 +3,11 @@
 
 @{
     ViewData["Title"] = "Categories";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/Dealer_Layout.cshtml";
 }
 
 <div class="container mt-5">
-    <div class="row align-items-center mb-4" style="margin-top: 96px;">
+    <div class="row align-items-center mb-4" >
         <div class="col">
             <h2 class="mb-0">Categories</h2>
         </div>
