--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Vehicle/AddVehicle.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Vehicle/AddVehicle.cshtml
@@ -2,12 +2,12 @@
 
 @{
     ViewData["Title"] = "Add Vehicle";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/Dealer_Layout.cshtml";
     var categories = ViewBag.Categories as List<SelectListItem>;
 }
 
 <div class="container mt-5">
-    <div class="row justify-content-center" style="margin-top: 96px;">
+    <div class="row justify-content-center" >
         <div class="col-lg-6 col-md-8">
             <div class="card shadow-sm">
                 <div class="card-header text-white" style="background-color: #6c757d;">
