--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Vehicle/VehicleDealer.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Vehicle/VehicleDealer.cshtml
@@ -2,12 +2,12 @@
 
 @{
     ViewData["Title"] = "Dealer Vehicles";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/Dealer_Layout.cshtml";
     var dealer = Model?.FirstOrDefault();
 }
 
 <div class="container mt-5">
-    <div class="row justify-content-center" style="margin-top: 96px;">
+    <div class="row justify-content-center" >
         <div class="col-lg-10 col-md-12">
             <div class="card shadow-sm mb-4">
                 <div class="card-header text-white" style="background-color: #6c757d;">
