--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Vehicle/VehicleDetail.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Vehicle/VehicleDetail.cshtml
@@ -3,11 +3,11 @@
 
 @{
     ViewData["Title"] = "Vehicle Detail";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/Dealer_Layout.cshtml";
 }
 
 <div class="container mt-5">
-    <div class="row justify-content-center" style="margin-top: 96px;">
+    <div class="row justify-content-center" >
         <div class="col-lg-7 col-md-9">
             <h2 class="mb-4 text-center">Vehicle Detail</h2>
             @if (Model == null)
