--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Appointment/DetailsAppointment.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Appointment/DetailsAppointment.cshtml
@@ -1,7 +1,10 @@
 ﻿@model BusinessObject.BusinessObject.Appointment.Respond.GetAppointmentRespond
 
+@{
+	Layout = "~/Views/Shared/Dealer_Layout.cshtml";
+}
 
-<div class="container" style="margin-top: 100px; margin-bottom: 40px;">
+<div class="container" >
 	<div class="row mb-4">
 		<div class="col">
 			<h2 class="mb-0">Appointment Details</h2>
