--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Appointment/IndexAppointment.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Appointment/IndexAppointment.cshtml
@@ -1,6 +1,10 @@
 ﻿@model IEnumerable<BusinessObject.BusinessObject.Appointment.Respond.GetAppointmentRespond>
 
-<div class="container" style="margin-top: 100px; margin-bottom: 40px;">
+@{
+    Layout = "~/Views/Shared/Dealer_Layout.cshtml";
+}
+
+<div class="container" >
     <div class="row mb-4">
         <div class="col d-flex align-items-center justify-content-between">
             <h2 class="mb-0">Appointments</h2>
