--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Category/AddCategory.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Category/AddCategory.cshtml
@@ -2,11 +2,11 @@
 
 @{
     ViewData["Title"] = "Add Category";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/Dealer_Layout.cshtml";
 }
 
 <div class="container mt-5">
-    <div class="row justify-content-center" style="margin-top: 96px;">
+    <div class="row justify-content-center" >
         <div class="col-lg-6 col-md-8">
             <div class="card shadow-sm">
                 <div class="card-header text-white" style="background-color: #6c757d;">
