--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Dealer_Layout.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Dealer_Layout.cshtml
@@ -17,7 +17,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -179,6 +179,10 @@
                     <button class="header-btn">
                         <i class="bi bi-person-circle" style="font-size: 18px;"></i>
                     </button>
+                    @* <a href="/Account/Logout" class="btn btn-outline-danger ms-2">Logout</a> *@
+                    <a href="@Url.Action("Logout", "Account")" class="header-btn" style="text-decoration: none; color: inherit; margin-left: 10px;">
+                        <i class="bi bi-box-arrow-right" style="font-size: 16px;" title="Logout"></i>
+                    </a>
                 </div>
             </div>
 
@@ -264,11 +268,8 @@
     <!-- Preloader -->
     <div id="preloader"></div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/main.js" asp-append-version="true"></script>
 
-
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/php-email-form/validate.js"></script>
     <script src="~/lib/aos/aos.js"></script>
     <script src="~/lib/glightbox/js/glightbox.min.js"></script>
@@ -277,7 +278,7 @@
     <script src="~/lib/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="~/lib/swiper/swiper-bundle.min.js"></script>
 
-    <!-- Bootstrap JS -->
+    <!-- Bootstrap JS (only once, at the end) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Sidebar JS -->
