Fix: Report Page

--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Dealer_Layout.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Dealer_Layout.cshtml
@@ -134,17 +134,12 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="invoice">
+                        <a class="nav-link" asp-area="" asp-action="Report" asp-controller="Dealer">
                             <div class="nav-content">
                                 <i class="bi bi-receipt nav-icon"></i>
-                                Invoice
+                                Report
                             </div>
                         </a>
-                        <ul class="submenu" id="submenu-invoice" style="display: none;">
-                            <li><a href="#" class="submenu-link">All Invoices</a></li>
-                            <li><a href="#" class="submenu-link">Create Invoice</a></li>
-                            <li><a href="#" class="submenu-link">Templates</a></li>
-                        </ul>
                     </li>
                 </ul>
             </div>
